Fix some z-index stuff

--- a/findshows/static/findshows/tailwind.css
+++ b/findshows/static/findshows/tailwind.css
@@ -624,6 +624,14 @@ video {
   z-index: 50;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
